- MANTA-85 Increase uniformity of tags in vcf output
v0.13.2
- First complete pass at installation and user guide
v0.13.1
- MANTA-81 Fix small indel somatic false negatives introduced
in MANTA-63
- MANTA-80 Additional workflow options: run subsections of the
genome, finer task parallelization control and merge multiple
input BAMs per sample.
v0.13.0
- MANTA-63 Incorporate read-pair evidence into small SVs/indels
- MANTA-77 Fix assertion for rna-seq test
- MANTA-17 Include semi-aligned reads in discovery and scoring
- MANTA-69 Update score/write filter to account for CIGAR and SA-read
candidates, and new uniform candidate scheme for self-edges.
- MANTA-70 Correct filters to allow for small inversion and tandem dup
detection 
- MANTA-68 SVLEN not set correctly for non-deletions
- MANTA-64 Improve candidate generation for small regions
- MANTA-43 allow manta installation to be relocated
- MANTA-55 compile python code as part of build/install
v0.12.1
- MANTA-58 fix issue with breakends near contig boundaries
- MANTA-61 add markdown-based user guide to build
- MANTA-30 initial integration of known variant tracing framework
v0.12
- MANTA-20 incorporate split-reads into quality score
- MANTA-42 SV finder mismatches various read pair / sv-candidate combinations
- MANTA-53 Enable --rescore option in runWorkflow.py
- MANTA-40 Don't call splicing-events in RNA-seq as deletions
- MANTA-20 include split read counts for short reads
- MANTA-44 Fix Rhodobacter analysis
v0.11
- Adjust all vcf output to pass vcf-validator
- MANTA-20 fix split read breakpoint location
v0.10.1
- Fix low-frequency assertion due to unexpected alignment pattern
v0.10
- MANTA-20 Limit split read counts to those uniquely supporting each allele,
where P(allele|read)>0.999
- MANTA-20 Add likelihood based QUAL,GQ scores to diploid output, adjust
thresholds of somatic output to incorporate ref pairs and split reads.
- MANTA-41 Fails when chrom name not in [a-zA-z0-9_-]+